syntax = "proto3";

import "google/protobuf/any.proto";

package asgard_messages;

enum PeerState{
    ACTIVE=0;
    IMMIGRANT=1;
    EXILE=2;
}

message Peer{
    string peer_id=1;
    string endpoint=2;
    PeerState peer=3;
}

message AsgardPeerInfo{
    repeated Peer peer_info=1;
}

message AsgardSystemMessage{
    oneof message{
        AsgardPeerInfo asgard_peer_info_message=1;
    }
}

message AsgardLogMessage{
    uint64 log_index=1;
    oneof message{
        google.protobuf.Any user_message=2;
        AsgardSystemMessage system_message=3;
    }
}

message AddEntry{
    repeated AsgardLogMessage messages=1;
}

message LeaderHeartbeat {
    string leader_id=1;
    uint64 commit_index=2;
}

message FollowerUpdate{
    uint64 log_index=1;
}

message RebellionRequest{
    string candidate_id=1;
}

message VoteRequest{
    string candidate_id=1;
    uint64 last_log_index_term=2;
    uint64 last_log_index=3;
}

message RebellionResponse{
    string peer_id=1;
    bool VoteGranted=2;
}

message VoteResponse{
    string candidate_id=1;
    uint64 term=2;
}

message LeaderSync{
    repeated AsgardLogMessage messages=1;
}

message FollowerInitialized{
    string leader_id=1;
}

message GenericAsgardMessage{
    uint64 term=1;
    oneof generic_message{
        AddEntry add_entry_message=2;
        LeaderHeartbeat heart_beat_message=3;
        FollowerUpdate follower_update_message=4;
        RebellionRequest canvass_rebellion_message=5;
        VoteRequest request_votes_message=6;
        RebellionResponse canvass_response_message=7;
        VoteResponse vote_response_message=8;
        LeaderSync leader_sync_message=9;
        FollowerInitialized follower_initialized_message=10;
    }
}